--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "tailwindcss": "npx tailwind build src/css/index.css -c src/css/tailwind.config.js -o src/css/tailwind.css",
-    "start": "npm run tailwindcss && react-scripts start",
-    "build": "npm run tailwindcss && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
