--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "framer-motion": "^6.3.16",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
@@ -16,7 +17,9 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.1.0",
     "styled-components": "^5.3.5",
+    "tsparticles": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
