project carousal and editing styles

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "project": "Python GUI Photo Selector",
+    "project": "Photo Selector",
     "description": "A simple user interface to be able to view images, it was built with the python language.",
     "url": "https://github.com/javiguerra777/py-gui-photo-selector",
     "image": "images/pythonGUI.JPEG",
