--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@material-ui/core": "^4.12.4",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.3.16",
+    "grid-engine": "^2.18.1",
     "nanoid": "^4.0.0",
+    "phaser": "^3.55.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -20,6 +23,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.0",
     "react-tsparticles": "^2.1.0",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
