--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emailjs/browser": "^3.6.2",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -14,19 +13,16 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.1.3",
+    "framer-motion": "^9.0.2",
     "grid-engine": "^2.18.1",
     "nanoid": "^4.0.0",
     "phaser": "^3.55.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.3.2",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-spring": "^9.5.0",
-    "sass": "^1.53.0",
     "styled-components": "^5.3.5",
     "tsparticles": "^2.1.0",
     "web-vitals": "^2.1.4"
