--- a/package.json
+++ b/package.json
@@ -3,30 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emailjs/browser": "^3.6.2",
-    "@material-ui/core": "^4.12.4",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
     "framer-motion": "^6.3.16",
-    "grid-engine": "^2.18.1",
-    "nanoid": "^4.0.0",
-    "phaser": "^3.55.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.3.2",
-    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "react-spring": "^9.5.0",
+    "react-scripts": "^5.0.1",
     "react-tsparticles": "^2.1.0",
-    "sass": "^1.53.0",
-    "styled-components": "^5.3.5",
+    "styled-components": "^5.3.9",
     "tsparticles": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
@@ -53,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.25",
+    "@types/styled-components": "^5.1.26",
+    "tailwindcss": "^3.3.1",
+    "typescript": "^3.2.1"
   }
 }
