feat(jobs): job section is responsive, projects have images associate with them

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,9 @@
   "rules": {
     "jsx-a11y/label-has-associated-control": 0,
     "react/function-component-definition": 0,
+    "@typescript-eslint/no-var-requires": "off",
+    "no-unused-expressions": "off",
+    "no-unused-vars": "off",
     "linebreak-style": 0,
     "no-lonely-if":"off",
     "no-underscore-dangle": "off",
@@ -46,7 +49,10 @@
       "warn",
       {
         "extensions": [
-          ".tsx"
+          ".tsx",
+          ".ts",
+          ".js",
+          ".jsx"
         ]
       }
     ],
