--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-portfolio",
-  "homepage": "https://javiguerraweb.github.io",
+  "homepage": "https://javiguerra777.github.io/personal-portfolio-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
