--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-vertical-timeline-component": "^3.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.16",
     "popmotion": "^11.0.5",
@@ -24,6 +25,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "react-tsparticles": "^2.1.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^5.3.9",
     "tsparticles": "^2.1.0",
     "web-vitals": "^2.1.4",
