feat(apollo client): index.tsx added apollo client and provider to application, JobsQuery.tsx setup up simple query in own folder for service, Jobs.tsx usequery to fetch from gql server

--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.8.8",
     "@emailjs/browser": "^3.11.0",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -16,6 +17,7 @@
     "@types/react-vertical-timeline-component": "^3.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.16",
+    "graphql": "^16.8.1",
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
