--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "cloudinary": "^1.41.0",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "mongoose": "^8.0.2"
