--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -44,6 +44,7 @@
     "react/prop-types": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "react/jsx-wrap-multilines": 0,
+    "react/require-default-props": 0,
     "react/jsx-filename-extension": [
       "warn",
       {
