--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.13.0",
     "cloudinary": "^1.41.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "graphql": "^16.8.1",
+    "express": "^4.18.2",
     "mongoose": "^8.0.2"
   },
   "devDependencies": {
